[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "torchbell"
version = "0.1.0"
description = "Monitor your training remotely. Get notified when it completes, crashes, or is stopped."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
dependencies = ["requests>=2.28.0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Repository = "https://github.com/Passion4ever/torchbell"

[tool.setuptools]
packages = ["torchbell"]
