[build-system]
requires = ["setuptools>=64,<69"]
build-backend = "setuptools.build_meta"

[project]
name = "torchbell"
dynamic = ["version"]
description = "Monitor your training remotely. Get notified when it completes, crashes, or is stopped."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
dependencies = ["requests>=2.28.0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]
typing = ["mypy>=1.0", "types-requests>=2.28.0"]

[project.urls]
Repository = "https://github.com/Passion4ever/torchbell"

[tool.setuptools]
packages = ["torchbell"]

[tool.setuptools.dynamic]
version = {attr = "torchbell.__version__"}

[tool.setuptools.package-data]
torchbell = ["py.typed"]

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
disallow_untyped_defs = false
warn_return_any = true

[[tool.mypy.overrides]]
module = "requests.*"
ignore_missing_imports = true
